refactor: changed to get from getfirst