@@ -132,6 +132,6 @@ public class Translator {
 
         LinkExtractor extractor = new LinkExtractor(doc);
 
-        return extractor.extractHeadings().getFirst().text();
+        return extractor.extractHeadings().get(0).text();
     }
 }
